docs: update large-scale cluster management design
Update the design doc for large-scale node management.

--- a/大规模集群节点管理工具方案设计文档.md
+++ b/大规模集群节点管理工具方案设计文档.md
@@ -243,7 +243,7 @@ sequenceDiagram
     Agent->>JetStream: 向结果流报告成功
 ```
 
-##### **5. 时间规划（8 月 11 日 — 9 月 10 日）**
+#### **5. 时间规划（8 月 11 日 — 9 月 10 日）**
 
 - **总体目标**
 
