feat: add benchmarks and tests; remove web frontend
- Remove oasis-web component and update workspace
- Add E2E latency and throughput benchmarks with NATS TLS support
- Add unit tests for selector engine, task manager, and config
- Add utils module for shared functionality
- Update design documentation

--- a/大规模集群节点管理工具方案设计文档.md
+++ b/大规模集群节点管理工具方案设计文档.md
@@ -1,20 +1,23 @@
-## **大规模集群节点管理工具方案设计文档**
+## 大规模集群节点管理工具方案设计文档
 
-### **1. 整体设计**
+### 1. 整体设计
 
-#### **1.1. 项目目标**
+#### 1.1. 项目目标
 
-为 OpenCloudOS 设计并开发一款大规模集群节点管理工具。该工具旨在提供一个高性能、高可用、安全可靠的解决方案，用于对 100 至 1000+ 规模的节点集群进行高效的管理，并保证核心通信延迟在 50ms 以内。
+为 OpenCloudOS 设计并开发一款大规模集群节点管理工具（Oasis）。该工具面向 100 至 1000+ 规模节点集群，提供统一的节点信息采集、批量命令执行、文件分发与灰度发布能力。
 
-#### **1.2. 架构原则**
+#### 1.2. 架构原则
 
-- **架构统一：** 采用主从（Server/Agent）架构，并将消息、状态、协调等分布式能力收敛到单一、统一的基础设施中，以简化系统复杂度和运维成本。
-- **性能优先：** 核心通信采用异步消息模型，最大化并发能力和响应速度。
-- **安全可靠：** 所有通信链路均采用加密认证，关键操作需具备可靠性保证和可审计性。
-- **配置统一：** 关键配置由 Server 在管理节点集中管理，作为单一事实来源，通过 KV/Object 分发至托管节点，支持审计与回滚。
-- **目标选择：** 任务下发支持单播/分组/广播三种模式，基于 subject 与 durable 的组合实现路由与负载均衡。
+- DDD 分层（Server）：服务端按职责拆分为 `interface` / `application` / `infrastructure` 三层。
+  - `interface`：对外接口层（gRPC），只负责协议适配、参数校验与错误映射。
+  - `application`：应用层，用例编排与流程控制（批量任务、文件分发、灰度发布等），不直接耦合具体基础设施。
+  - `infrastructure`：基础设施层，封装 NATS JetStream、TLS、Streams/KV/ObjectStore 初始化与监控等细节。
+- 领域模型统一：核心业务类型与消息协议复用 `oasis-core` 的统一类型（Agent/Task/File/Rollout 等），避免接口层与基础设施层各自定义“重复模型”。
+- Agent/Server 架构：Server 作为控制面与编排中心，Agent 作为执行与上报单元；控制面通过 gRPC 触发用例，数据面通过 JetStream 完成任务/结果/文件流转。
+- 单一基础设施依赖：消息流、KV 与对象存储统一建立在 NATS JetStream 之上，降低组件数量与运维复杂度。
+- 可靠性与幂等：关键链路采用持久化消息、ACK 与去重策略，允许消息重投递但要求执行侧幂等。
 
-#### **1.3. 整体架构图**
+#### 1.3. 整体架构图
 
 ```mermaid
 graph TD
@@ -37,205 +40,227 @@ graph TD
             JetStream[("NATS JetStream 集群")]:::infra
         end
 
-        Admin -- "gRPC 管理接口" --> Server
-        Server -- "状态读写 / 任务发布 / 选主" --> JetStream
-        Agent -- "拉取(持久化)任务 / 状态上报" --> JetStream
+        Admin -- "gRPC 管理接口（mTLS）" --> Server
+        Server -- "任务/文件发布、KV Watch" --> JetStream
+        Agent -- "KV 心跳与信息上报、拉取任务/文件" --> JetStream
     end
 
     subgraph "基础设施核心职责"
         direction TB
-        TaskQueue["<b>任务队列</b><br/>(可靠消息流)"]:::responsibility
-        StateStore["<b>状态存储</b><br/>(持久化KV存储)"]:::responsibility
-        Election["<b>协调 / 选主</b><br/>(KV + CAS + TTL)"]:::responsibility
-        FileStore["<b>文件分发</b><br/>(对象存储)"]:::responsibility
+        TaskQueue["任务队列<br/>(可靠消息流)"]:::responsibility
+        StateStore["状态存储<br/>(持久化KV存储)"]:::responsibility
+        FileStore["文件分发<br/>(对象存储)"]:::responsibility
     end
 
     JetStream --> TaskQueue
     JetStream --> StateStore
-    JetStream --> Election
     JetStream --> FileStore
 ```
 
-#### **1.4. 技术选型**
+#### 1.4. 技术选型
 
-- **开发语言:** **Rust**。
-- **核心基础设施:** **NATS JetStream**。统一提供可靠消息流、持久化键值(KV)存储、对象存储及分布式协调能力。
-- **服务端 API 框架:** **gRPC (Tonic)**。作为管理员与 Server 交互的管理入口。
-- **序列化:** **JSON** / **MessagePack**。
+- 开发语言：Rust。
+- 核心基础设施：NATS JetStream。统一提供持久化消息流（Streams）、KV、对象存储（Object Store）。
+- 服务端 API 框架：gRPC (Tonic)。作为管理员与 Server 交互的管理入口（采用 `https://` + mTLS）。
+- 序列化：Protobuf（任务、文件、Agent 信息均为 Protobuf 消息；部分 KV 内容为 JSON）。
 
-### **2. 详细设计**
+### 2. 详细设计
 
-#### **2.1. 状态管理与一致性**
+#### 2.1. 状态管理与一致性
 
-为保证 Server 无状态和快速故障恢复，系统的所有持久化状态均由 NATS JetStream 管理。
+Server 的主要状态以“内存缓存 + JetStream 持久化消息/kv”为主，其中：
 
-- **节点状态与分组：** Agent 的元数据（Facts）、在线状态及分组关系等，将持久化存储于 JetStream 的 **KV Store** 中。Server 内存仅作为热数据缓存，可在重启或主节点切换后，通过 KV Store 快速重建。
-- **高可用协调：** Server 集群的选主通过 **KV + CAS + TTL** 实现。约定键 `kv:LEADER`，值为 leader 实例 ID；
-  - 抢占：使用 KV 条目的 Revision 做 CAS（Compare-And-Set）。
-  - 租约：设置 `TTL = 2 x 心跳间隔`，Leader 周期性续租，续租失败即自动让位。
-  - 观察：非 Leader 实例 watch 该键变化以进行快速切换和缓存重建。
+- AgentInfo：由 Agent 写入 JetStream KV（Protobuf 编码）。Server 通过 KV `watch_all()` 构建本地缓存与倒排索引。
+- Heartbeat：由 Agent 写入 JetStream KV（字符串时间戳）。Server 通过 KV `watch_all()` 维护在线/离线视图，并周期性超时扫描。
+- 任务/批次状态：当前版本主要保存在 Server 内存缓存（TaskMonitor），同时任务执行结果由 Agent 发布到 `results.>` 流，Server 消费该流以更新缓存。
 
-#### **2.2. 可靠性与容错**
+- KV Buckets：
+  - `OASIS-AGENT-INFOS`：Agent 信息（facts + labels + groups + system 信息）。
+  - `OASIS-AGENT-HB`：心跳（TTL bucket，Server 超时逻辑也会将其视为在线/离线依据）。
+  - `OASIS-AGENT-LABELS`：Agent labels（Agent 侧也支持 `oasis:labels-update` 内置任务写入；Server 侧主要以 AgentInfo 的 info map 为准）。
+  - `OASIS-ROLLOUTS`：灰度发布状态。
 
-- **消息投递保证：** 关键业务流（如任务下发、结果上报）将使用 JetStream 的持久化消息流，并启用 **ACK (消息确认) 机制**，确保消息至少被成功处理一次 (At-Least-Once)，防止因 Agent 瞬时离线或网络抖动造成的任务丢失。
-- **文件分发：** 大文件分发通过 JetStream 的 **Object Store** 实现。Server 将文件上传至 Object Store，Agent 从中拉取，避免了消息总线被大文件拥塞，同时也为文件传输提供了断点续传和校验能力。
-- **幂等与去重：** Server 发布任务时设置 `Nats-Msg-Id = taskId`，Stream 开启 `duplicates` 窗口；Agent 侧持久化最近 `taskId` 与结果摘要，保障重放安全。
-- **死信隔离：** 任务消费者配置 `max_deliver` 与 `ack_wait`，超过最大重试的消息路由至 `tasks.DLQ`，Server 专门消费者做告警与人工干预。
-- **背压与拉取模型：** Agent 使用“拉取型 durable consumer”，通过 `pull batch/bytes`、`max_ack_pending`、`ack_wait` 控制并发与背压，避免推送风暴。
-- **受限模式与降级：** JetStream 异常或网络分区时，系统进入受限模式（只读查询可用、任务下发暂停），暴露健康状态与积压告警；恢复后自动排队重放。
-- **备份与灾备：** Streams/KV/Object 的备份与恢复流程规范化，定期演练，明确 RPO/RTO 目标。
-- **可观测性：** 暴露发布/消费延迟、积压、重投递率、ack 超时、对象下载耗时、失败率等指标；跨组件链路使用 OpenTelemetry 跟踪（以 `taskId` 关联 trace/span）。
+#### 2.2. 可靠性与容错
 
-#### **2.3. 安全模型**
+- 任务/文件投递：使用 JetStream Streams + `AckPolicy::Explicit`。
+- 去重：
+  - 任务结果上报与文件下发均设置 `Nats-Msg-Id`（用于 JetStream 去重窗口）。
+  - Server 侧 streams 配置了 `duplicate_window`（见 `ensure_streams` 逻辑）。
+- 重试：
+  - 任务 consumer 侧设置 `max_deliver` 与 `ack_wait`。
+  - Server 侧对部分 NATS/KV 操作使用 backoff 重试。
 
-- **通信加密：** 所有组件（Server, Agent, JetStream）之间的通信均启用 **TLS** 加密。
-- **身份认证与最小权限：** 每个 Agent 使用独立 **NATS JWT**，并基于账户/权限限制其可发布/订阅的 subjects（仅允许本 Agent 的任务与结果主题）。
-- **凭证轮换：** 约定 mTLS 证书与 JWT 的轮换窗口与近失效告警；支持撤销与迅速失效传播。
-- **操作审计与风控：** 高危操作引入二人复核；审计事件写入独立流，长周期保留。
+#### 2.3. 安全模型
 
-#### **2.4. 扩展性**
+- gRPC：CLI 通过 `https://...` 访问 Server，并加载 CA + 客户端证书（mTLS）。
+- NATS：推荐使用 `tls://...`，客户端会从 `certs_dir` 尝试加载 CA 与客户端证书；若证书不存在会降级为不启用 mTLS（具体行为以 `nats.url` 是否以 `tls://` 开头为准）。
 
-- **节点分组：** 初期基于 KV Store 中的标签进行筛选；预留 **CEL (Common Expression Language)** 扩展，实现复杂动态分组。
-- **任务执行器：** 可插拔设计；短期先落地“容器/命名空间隔离 + 能力限制”，长期可引入 **Wasm** 沙箱。
+#### 2.4. 扩展性
 
-#### **2.5. 主题与存储设计**
+- 选择器表达式：Server 内置解析器（pest）支持逻辑表达式，后续可扩展更多操作符。
+- 任务类型：当前包含“命令任务”和“文件任务”（另有 `oasis:labels-update` 内置任务）。
 
-- **主题命名**（示例）：
+#### 2.5. 主题与存储设计
 
-  - 任务：`tasks.exec.<group>.<agentId?>`（支持按组广播或定点单播）
-  - 结果：`results.<taskId>.<agentId>`
-  - 审计：`audit.<action>.<scope>`
-  - 广播：`tasks.exec.broadcast`
+系统使用以下主题与 JetStream 资源命名：
 
-- **Streams**：
+- 任务下发 subject：
+  - `tasks.exec.agent.<agentId>`（Server 向单个 Agent 下发任务；Agent 为此 subject 创建 durable consumer）
+- 任务结果 subject：
+  - `results.<taskId>.<agentId>`（Agent 上报任务执行状态/结果）
+- 文件任务 subject：
+  - `files.<agentId>`（Server 向单个 Agent 下发文件部署任务；Agent 创建 durable consumer）
 
-  - `TASKS`：work-queue 语义，`replicas=3`，`storage=file`，`discard=old`，`max_age=24h`，`duplicates=2m`，配置 `max_deliver` 与 DLQ `tasks.DLQ`；subjects: `tasks.exec.>`
-  - `RESULTS`：结果/审计较长保留期，便于查询与追溯；subjects: `results.>`
-  - `AUDIT`：关键操作与安全事件长保留，便于合规；subjects: `audit.>`
+- Streams：
+  - `OASIS-TASKS`：subjects `tasks.exec.>`，WorkQueue 语义。
+  - `OASIS-RESULTS`：subjects `results.>`，Limits 语义。
+  - `OASIS-FILES`：subjects `files.>`，WorkQueue 语义。
 
-- **KV 结构**：
+- KV Buckets：
+  - `OASIS-AGENT-INFOS`：key = `agent_id`（规范化为单层键），value = Protobuf `AgentInfoMsg`。
+  - `OASIS-AGENT-HB`：key = `agent_id`，value = 字符串时间戳。
+  - `OASIS-AGENT-LABELS`：key = `agent_id`，value = JSON（labels map）。
+  - `OASIS-ROLLOUTS`：灰度发布状态。
 
-  - `kv:NODES/<agentId>/facts`（版本化，非 TTL）
-  - `kv:NODES/<agentId>/heartbeat`（TTL = 2 x 心跳间隔）
-  - `kv:NODES/<agentId>/labels`（可由 Server/CLI 变更）
+- 对象存储：`OASIS_ARTIFACTS`。
+  - 对象 key：`{path_hash}/{filename}.v{revision}`，其中 `path_hash = sha256(source_path)[0..8]`。
+  - 当前版本指针：`{path_hash}/{filename}.current`，内容为 revision。
 
-- **对象存储**：`obj:ARTIFACTS`，文件元数据包含 `sha256`、`size`、`content-type`，Agent 下载后校验。
-
-示例（`TASKS` 配置）：
-
-```json
-{
-  "name": "TASKS",
-  "subjects": ["tasks.exec.>"],
-  "retention": "workqueue",
-  "storage": "file",
-  "replicas": 3,
-  "max_age": "24h",
-  "duplicates": "2m",
-  "discard": "old",
-  "allow_direct": false
-}
-```
+注：Streams/KV/ObjectStore 的创建与更新由 Server 启动阶段统一完成（`ensure_streams`）。
 
 主题与存储映射（示意）：
 
 ```mermaid
 graph TB
   subgraph Streams
-    T[TASKS
-subjects: tasks.exec.>] --> DLQ[tasks.DLQ]
-    R[RESULTS
-subjects: results.>]
-    A[AUDIT
-subjects: audit.>]
+    T["OASIS-TASKS<br/>subjects: tasks.exec.>"]
+    R["OASIS-RESULTS<br/>subjects: results.>"]
+    F["OASIS-FILES<br/>subjects: files.>"]
   end
   subgraph KV
-    K1[kv:NODES/<agentId>/facts]
-    K2[kv:NODES/<agentId>/heartbeat]
-    K3[kv:NODES/<agentId>/labels]
-    KL[kv:LEADER]
+    KINFO[OASIS-AGENT-INFOS]
+    KHB[OASIS-AGENT-HB]
+    KLBL[OASIS-AGENT-LABELS]
+    KRO[OASIS-ROLLOUTS]
   end
   subgraph ObjectStore
-    O[obj:ARTIFACTS]
+    O[OASIS_ARTIFACTS]
   end
-  T-->Agents[(Agents Pull)]
-  Agents-->R
   Server[(Server)]-->T
-  Server-->A
-  Server-->K1
-  Server-->K3
-  Agents-->K2
-  Server-->O
-  Agents-->O
+  Server[(Server)]-->F
+  Agent[(Agent)]-->R
+  Agent[(Agent)]-->KINFO
+  Agent[(Agent)]-->KHB
+  Server[(Server)]-->O
+  Agent[(Agent)]-->O
 ```
 
-#### **2.6. 分组与目标选择（标签/IP 选择器 + 单播/分组/广播）**
+#### 2.6. 目标选择（选择器表达式）
 
-- **标签模型**：Server 在 KV 中维护每个节点的标签（如 `env`,`role`,`az` 等）与元信息（`ip`、`hostname`）。
-- **选择器语法**：支持布尔表达式，操作符包含 `==,!=,in,&&,||,!`，字段包含标签键与保留键（`ip`,`hostname`）。示例：
-  - `env=="prod" && role=="worker"`
-  - `ip in 10.0.0.0/8 || ip in 192.168.0.0/16`
-- **路由策略**：
-  - 单播：`tasks.exec.agent.<agentId>`，专属 durable；适用于定向下发/诊断。
-  - 分组：`tasks.exec.group.<group>`，组内共享 durable（工作队列），组内负载均衡；可将 `group` 定义为逻辑名（如 `role=worker` 的物化组）。
-  - 广播：`tasks.exec.broadcast`，每个 Agent 各自 durable，全部执行。
-  - 默认：`tasks.exec.default`，全体共享 durable，未指定目标时的通道。
+所有需要“选目标 Agent”的接口都使用同一套选择器表达式，并由 Server 解析。
 
-注：CLI 的 `--selector` 将由 Server 解析为目标集合，并展开为相应 subject 的发布动作（多目标多条消息）；与 `--agent/--group/--broadcast` 可并用，最终按 union 去重。
+- 基础关键字：
+  - `all` / `true`：匹配全部 Agent。
+  - `agent-1,agent-2,...`：逗号分隔的 Agent ID 列表。
+- 标签匹配：`labels["k"] == "v"` 或 `labels['k'] == 'v'`。
+- 系统信息匹配：`system["hostname"] == "xxx"`（system 键来自 Agent 上报的 `__system_...` 字段，使用时去掉前缀）。
+- 分组匹配：`"group-name" in groups`（group 信息来自 AgentInfo 的 `__groups` 字段，逗号分隔）。
+- 逻辑运算：支持 `and` / `or` / `not` 以及括号。
 
-### **3. 组件设计**
+示例：
 
-#### **3.1. Server (服务端)**
+```text
+all
+agent-1,agent-2
+labels["role"] == "web" and labels["environment"] == "prod"
+system["hostname"] == "node-01" or "canary" in groups
+not (labels["role"] == "db")
+```
 
-作为系统的业务逻辑编排中心，运行在管理节点，其核心职责是响应管理请求，并与 JetStream 交互；对托管节点的关键配置进行统一管理与分发。
+#### 2.7. 范围与限制
 
-- **gRPC 服务模块：** 暴露 API 接口，供管理员或自动化工具调用。
-- **配置中心/统一配置管理：** 维护托管节点关键配置的单一事实来源（SoT），提供配置的新增/更新/下发/回滚与变更审计；基于 JetStream KV（小配置）与 Object Store（大文件）完成分发。
-- **标签与分组管理：** 提供标签变更 API/CLI（如为节点设置 `env=prod`、`role=worker`），维护节点标签索引；支持按 IP/CIDR、标签表达式选择目标集合，并将目标解析为单播/分组/广播的 subject 发布策略。
-- **状态管理器：** 封装对 JetStream KV Store 的读写操作，向业务层提供统一的状态访问接口。
-- **任务处理器：** 接收 gRPC 请求，构建任务并发布到 JetStream 的任务流中。
-- **高可用模块：** 实现基于 KV + CAS + TTL 的选主与回调逻辑，处理主备切换与缓存重建。
+- 暂未提供 DLQ、全链路可观测性与跨 Server 选主能力。
+- 暂未引入 NATS JWT/账号隔离与细粒度 subject 权限控制。
 
-#### **3.2. Agent (客户端)**
+### 3. 组件设计
 
-作为部署在托管节点上的执行单元，其核心职责是响应任务并上报状态。
+#### 3.1. Server (服务端)
 
-- **身份与认证模块：** 负责加载和管理自身的 TLS 证书与 NATS JWT 凭证。
-- **状态上报器：** 周期性地收集节点信息（Facts），并通过更新 JetStream KV Store 中的对应键值来完成注册和心跳维持。
-- **任务订阅器：** 作为持久化消费者，连接到 JetStream 集群并订阅指定的任务流。
-- **任务执行器：** 解析从任务流中收到的消息，执行相应操作（如运行命令、下载文件），并将执行结果发布到结果流。
-- **消费模型与并发控制：** 使用“拉取型 durable consumer”，通过 `pull batch/bytes`、`max_ack_pending`、`ack_wait` 控制并发与背压，结合本地幂等记录避免重复执行。
+作为系统的业务逻辑编排中心，运行在管理节点。其核心职责是响应管理请求，并与 JetStream 交互，完成任务/文件/灰度发布等能力。
 
-#### **3.3. CLI (命令行工具)**
+- gRPC 服务模块：暴露 API 接口，供 CLI 调用（参见 `oasis.proto`）。
+- Agent 视图（Monitor）：
+  - `AgentInfoMonitor`：监听 `OASIS-AGENT-INFOS` KV 变更，维护 AgentInfo 缓存与 labels/system/groups 倒排索引。
+  - `HeartbeatMonitor`：监听 `OASIS-AGENT-HB` KV 变更，维护在线/离线缓存并周期性超时扫描。
+  - `SelectorEngine`：解析选择器表达式并以位图方式高效求交/并/非。
+- 任务服务（TaskService + TaskMonitor）：
+  - `TaskService` 负责批次创建与向 `tasks.exec.agent.<agentId>` 单播发布任务。
+  - `TaskMonitor` 作为 `results.>` 的 durable consumer，更新任务执行状态缓存。
+- 文件服务（FileService）：
+  - 通过 gRPC 分片上传存入 `OASIS_ARTIFACTS`。
+  - 下发文件部署任务到 `files.<agentId>`。
+- 灰度发布（RolloutService）：
+  - 状态持久化在 `OASIS-ROLLOUTS` KV。
+  - 按阶段将目标解析为 Agent 子集，并复用任务/文件服务执行。
 
-作为管理员的交互入口，提供最小化操作能力，便于脚本化与集成。
+#### 3.2. Agent (客户端)
 
-- **功能**
-  - 执行任务：`exec`
-    - 目标选择：`--agent <id,id>` / `--group <g1,g2>` / `--broadcast`
-    - 选择器（可选）：`--selector '<expr>'`，按标签/IP 选择目标，如 `env=="prod" && ip in 10.0.0.0/8`
-    - 命令与参数：`-- <command> [args...]`
-  - 文件分发：`pull-object`
-    - 语法：`pull-object --agent <ids> <object> [dest] [--sha256 HEX]`
-    - 行为：向对象存储（ARTIFACTS）取回对象并在 Agent 侧落盘，按需校验哈希
-  - 统一配置管理
-    - 上传/更新配置：`config put <name> <file> [--sha256 HEX]`
-    - 获取配置：`config get <name> [-o <path>]`
-    - 下发配置：`config publish <name> --selector '<expr>' [--dest <path>]`
-    - 历史与回滚：`config history <name>` / `config rollback <name> --to <version>`
-  - 节点标签管理
-    - 设置：`node label set <agentId> key=value [key=value...]`
-    - 删除：`node label del <agentId> key [key...]`
-    - 查看：`node label ls <agentId>` / `node ls --selector '<expr>'`
-- **配置**
-  - Server 地址：`--server http://<SERVER_IP>:50051`
-  - 日志：`OASIS_LOG`（级别）、`OASIS_LOG_FORMAT`（text/json）
-- **输出**
-  - 成功提交后打印 `task_id`；后续可扩展 `watch/取消/分页结果` 等能力
+作为部署在托管节点上的执行单元，其核心职责是上报节点信息与心跳、执行任务并回传结果、接收文件部署任务并落盘。
 
-### **4. 主要流程时序图**
+- 信息上报：启动时写入 `OASIS-AGENT-INFOS`（包含 labels、groups、系统信息 `__system_*`）。
+- 心跳：每 30 秒写入 `OASIS-AGENT-HB`（时间戳字符串）。
+- 任务执行（命令）：订阅 `tasks.exec.agent.<agentId>`，收到 `TaskMsg` 后用 `/bin/sh -c` 执行并将结果（base64 输出）发布到 `results.<taskId>.<agentId>`。
+- 文件部署：订阅 `files.<agentId>`，从 `OASIS_ARTIFACTS` 下载对象并写入目标路径，按需设置权限与属主。
 
-#### **4.1. 节点注册与状态同步**
+#### 3.3. CLI (命令行工具)
+
+作为管理员的交互入口，分为两类命令：
+
+- 通过 gRPC 调用 Server 的业务命令（`exec` / `file` / `agent` / `rollout`）。
+- 本地系统管理命令（`system`），用于初始化证书与 NATS、以及将 Server 安装为 systemd 服务。
+
+- 功能
+  - `exec`：批量命令执行
+    - `oasis-cli exec run -t <selector> -- <command> [args...]`
+    - `oasis-cli exec get <batch_id> [--states created,pending,...]`
+    - `oasis-cli exec list --limit N [--states ...]`
+    - `oasis-cli exec cancel <batch_id>`
+
+  - `file`：文件上传/分发/历史/回滚
+    - `oasis-cli file apply --src <local> --dest <remote> -t <selector> [--owner user:group] [--mode 0644] [--sha256 HEX]`
+    - `oasis-cli file history --source-path <path>`
+    - `oasis-cli file rollback --source-path <path> --revision <rev> --dest <remote> -t <selector> [--owner ...] [--mode ...]`
+    - `oasis-cli file clear`
+
+  - `agent`：Agent 部署/查询/移除/设置
+    - `oasis-cli agent deploy --ssh-target user@host --agent-id <id> --nats-url <url> [--labels k=v]... [--groups g]... [--agent-binary ./oasis-agent] [--generate-cert] [--auto-install]`
+    - `oasis-cli agent list [-t <selector>] [--verbose] [--is-online]`
+    - `oasis-cli agent remove --ssh-target user@host --agent-id <id>`
+    - `oasis-cli agent set --agent-id <id> [--labels k=v,k=v] [--groups group1,group2]`
+
+  - `rollout`：灰度发布
+    - `oasis-cli rollout create --name <name> -t <selector> --strategy percentage:10,30,60,100 --command <cmd> [--args ...] [--timeout S] [--auto-advance] [--advance-interval S]`
+    - `oasis-cli rollout create --name <name> -t <selector> --strategy count:2,5,10,0 --file-src <local> --file-dest <remote> [--file-mode 0644] [--file-owner user:group]`
+    - `oasis-cli rollout status <rollout_id>`
+    - `oasis-cli rollout list --limit N [--states created,running,...]`
+    - `oasis-cli rollout advance <rollout_id>`
+    - `oasis-cli rollout rollback <rollout_id> [--rollback-cmd <cmd>]`
+
+  - `system`：本地系统管理（无需 gRPC）
+    - `oasis-cli system init [--output-dir DIR] [--force]`（生成证书、docker-compose）
+    - `oasis-cli system install [--cfg-dir DIR] [--server-bin PATH] [--user root] [--group root]`
+    - `oasis-cli system enable|start|stop|restart|status|logs|uninstall`
+
+- 配置
+  - CLI 通过 `--config <path>` 指定配置文件，默认读取当前目录 `oasis.toml`。
+  - 支持 `OASIS__...` 环境变量覆盖（例如 `OASIS__NATS__URL`）。
+
+- 输出
+  - `exec run` 成功提交后打印 `batch_id`，后续通过 `exec get/list` 查询执行状态
+
+### 4. 主要流程时序图
+
+#### 4.1. 节点注册与状态同步
 
 ```mermaid
 sequenceDiagram
@@ -243,15 +268,16 @@ sequenceDiagram
     participant Server
     participant JetStream
 
-    Agent->>+Agent: 启动, 加载证书和NATS JWT
-    Agent->>+JetStream: 使用TLS+JWT连接
+    Agent->>+Agent: 启动, 加载配置与证书
+    Agent->>+JetStream: 连接 NATS（如配置为 tls:// 则启用 TLS）
     JetStream-->>-Agent: 连接成功
-    Agent->>JetStream: 向 KV Store 写入/更新自身状态
-    Server->>+JetStream: (通过Watch API) 监控到 KV Store 变更
-    Server->>Server: 处理节点上线/心跳事件
+    Agent->>JetStream: 写入 KV(OASIS-AGENT-INFOS) 上报 AgentInfo
+    Agent->>JetStream: 周期写入 KV(OASIS-AGENT-HB) 心跳
+    Server->>JetStream: watch_all() 监听 KV 变更
+    Server->>Server: 更新本地缓存、倒排索引与在线状态
 ```
 
-#### **4.2. 批量任务执行**
+#### 4.2. 批量任务执行
 
 ```mermaid
 sequenceDiagram
@@ -260,18 +286,18 @@ sequenceDiagram
     participant JetStream
     participant Agent_Target
 
-    CLI->>+Server: gRPC 调用: 执行任务
-    Server->>JetStream: 从 KV Store 读取目标节点列表
-    Server->>JetStream: 向任务流 (Stream) 发布任务消息
-    JetStream-->>Agent_Target: (作为消费者) 拉取到任务
-    Agent_Target->>+Agent_Target: 执行任务
-    Agent_Target->>JetStream: 向结果流 (Stream) 发布结果
-    Agent_Target->>JetStream: 发送 ACK 确认消息处理完毕
-    Server->>+JetStream: (作为消费者) 从结果流读取并聚合结果
-    Server-->>-CLI: 返回最终结果
+    CLI->>+Server: gRPC 调用: SubmitBatch
+    Server->>Server: 解析选择器表达式得到在线 Agent 列表
+    Server->>JetStream: 向 tasks.exec.agent.<agentId> 单播发布 TaskMsg（OASIS-TASKS）
+    JetStream-->>Agent_Target: 拉取到任务
+    Agent_Target->>Agent_Target: /bin/sh -c 执行命令
+    Agent_Target->>JetStream: 发布 TaskExecutionMsg 到 results.<taskId>.<agentId>
+    Agent_Target->>JetStream: ACK 任务消息
+    Server->>JetStream: 消费 results.> 更新 TaskMonitor 缓存
+    Server-->>-CLI: CLI 通过 exec get/list 查询状态（查询式，不是同步汇聚返回）
 ```
 
-#### **4.3. 文件分发**
+#### 4.3. 文件分发
 
 ```mermaid
 sequenceDiagram
@@ -280,49 +306,71 @@ sequenceDiagram
     participant JetStream
     participant Agent
 
-    CLI->>+Server: gRPC 调用: 分发文件
-    Server->>JetStream: 将文件上传至对象存储 (Object Store)
-    Server->>JetStream: 向任务流发布文件分发指令 (含文件信息)
-    JetStream-->>Agent: 拉取到文件分发指令
-    Agent->>JetStream: 从对象存储 (Object Store) 下载文件
-    Agent->>Agent: 校验并保存文件
-    Agent->>JetStream: 向结果流报告成功
+    CLI->>+Server: gRPC BeginFileUpload/UploadFileChunk/CommitFileUpload
+    Server->>JetStream: 存入 ObjectStore(OASIS_ARTIFACTS)
+    CLI->>Server: gRPC ApplyFile（携带 source_path+revision+dest+selector）
+    Server->>Server: 解析选择器表达式得到在线 Agent 列表
+    Server->>JetStream: 向 files.<agentId> 单播发布 FileConfigMsg（OASIS-FILES）
+    JetStream-->>Agent: 拉取到文件任务
+    Agent->>JetStream: 从 ObjectStore 下载对象并落盘
+    Agent->>Agent: 设置权限/属主并 ACK
 ```
 
-### **5. 时间规划（8 月 11 日 — 9 月 10 日）**
+### 5. 运行与部署
 
-- **总体目标**
+#### 5.1. 配置文件
 
-  - 9 月 10 日提交终稿作品（代码、文档、脚本、演示材料完整）。
-  - 8 月 21 日尽量实现“功能完整”的版本（端到端可演示）。
+`oasis.toml` 示例：
 
-- **里程碑**
+```toml
+[telemetry]
+log_level = "info"
+log_format = "text"
+log_no_ansi = false
 
-  - 8/11–8/17：架构基线与最小闭环（Server/Agent/CLI、任务流与对象存储、工作队列）。
-  - 8/18–8/21：功能完整预览（单播/分组/广播、文件分发 E2E、CLI 增强、基础 E2E/Bench）。
-  - 8/22–8/28：可靠性与容错（幂等、重试、DLQ、告警）、可观测性（日志/Tracing/指标）。
-  - 8/29–9/04：安全与高可用（JWT/mTLS、权限、选主与故障转移）、配置与限流背压调优。
-  - 9/05–9/07：性能与容量压测（参数基线）、稳定性修复。
-  - 9/08–9/10：终稿定版（Review、补测、交付物整理、演示脚本完善）。
+[nats]
+url = "tls://127.0.0.1:4222"
 
-- **周计划（按迭代推进）**
+[grpc]
+url = "https://localhost:50051"
 
-  - 第 1 周（8/11–8/17）
-    - 明确需求与接口，整理任务/结果/对象存储模型与主题规范。
-    - 搭建最小运行骨架：Server/Agent/CLI 通路、`tasks.exec.>` 与 `results.>`、工作队列语义。
-    - 引入对象存储（Object Store），完成上传/下载 API 与脚本示例。
-  - 第 2 周（8/18–8/21）
-    - 目标选择能力：单播/分组/广播 主题与消费者拓扑；CLI 增强（选择器、展示）。
-    - 文件分发端到端：服务端上传与分发、Agent 拉取与校验，提供一键演示脚本。
-    - 基础 E2E 与本地基准脚本完善，形成“功能完整”预览版。
-  - 第 3 周（8/22–8/28）
-    - 可靠性：幂等与去重、重试/退避、DLQ 与告警；任务取消与超时治理。
-    - 可观测性：统一日志、Tracing 埋点、关键指标（发布/消费延迟、积压、重投递率）。
-  - 第 4 周（8/29–9/04）
-    - 安全：mTLS、JWT 与权限策略；密钥与机密管理流程。
-    - 高可用：选主（KV + CAS + TTL + fencing）、故障转移；限流与背压参数调优。
-  - 第 5 周（9/05–9/07）
-    - 性能与容量：多维压测与参数基线；内存/CPU/IO 观测与优化。
-    - Bugfix 与文档初稿：用户指南、部署与运维手册、FAQ。
-  - 收尾（9/08–9/10）
-    - 代码与文档 Review，补充测试，交付物整理（包含 Demo 脚本与数据）。
+[tls]
+certs_dir = "./certs"
+
+[server]
+listen_addr = "0.0.0.0:50051"
+heartbeat_ttl_sec = 60
+```
+
+#### 5.2. 初始化 NATS + 证书
+
+使用 CLI 生成运行所需文件：
+
+```bash
+oasis-cli system init --output-dir .
+docker compose up -d
+```
+
+#### 5.3. 启动 Server
+
+开发/手动运行：
+
+```bash
+oasis-server --config oasis.toml
+```
+
+或安装为 systemd 服务：
+
+```bash
+oasis-cli system install --cfg-dir .
+oasis-cli system enable
+oasis-cli system start
+```
+
+#### 5.4. 部署 Agent
+
+生成部署包并安装：
+
+```bash
+oasis-cli agent deploy --ssh-target root@<host> --agent-id <id> --nats-url tls://<nats>:4222 --auto-install --agent-binary ./oasis-agent
+```
